添加多线程实例